video new about page jumping fix

--- a/src/routes/About/style.scss
+++ b/src/routes/About/style.scss
@@ -30,6 +30,33 @@
   @media screen and (max-device-width: 1040px) and (orientation : landscape) {
     right: -8%;
   }
+  video{
+    // width: 100%;
+    @include breakpoint($desktop-sm) {
+      height: calc(100vw - 60rem);
+    }
+
+    @include breakpoint($tablet-lg) {
+      height: calc(100vw - 54rem);
+    }
+
+    @include breakpoint($tablet-md) {
+      height: calc(100vw - 30rem);
+    }
+
+    @include breakpoint($mobile-lg) {
+      height: calc(100vw - 25rem);
+    }
+
+    @include breakpoint($mobile-sm) {
+      height: calc(100vw - 9.5rem);
+    }
+
+    @media screen and (max-device-width: 540px) and (orientation : landscape) {
+      height: calc(100vw - 23rem);
+    }
+
+  }
 }
 
 .video_mask {
@@ -68,14 +95,20 @@
     width: calc(100vw - 23rem);
   }
 
-
 }
 
 .video_remove_mask {
   // height: auto;
-  width: auto;
+  width: 100%;
   border-radius: 0;
   right: 0;
+  // min-height: 60rem;
+  video {
+    width: 100%;
+    @include breakpoint($desktop-sm) {
+      width: auto;
+    }
+  }
   @include breakpoint($desktop-sm) {
     height: calc(100vw - 60rem);
   }
@@ -100,9 +133,9 @@
     height: calc(100vw - 23rem);
   }
 
-  video {
-    width: 100%;
-  }
+  // video {
+  //   width: 100%;
+  // }
 }
 
 .about--transition {
